--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">flick&amp;hold</string>
+    <string name="button">Button</string>
+    <string name="todo">TODO</string>
+    <string name="textview">TextView</string>
 </resources>
